# wasm2usharp

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  hello.wasm  hello.wat
examples/Assets/: ExecuteHello.asset  ExecuteHello.cs  ExecuteHello.prefab  Hello.asset  Hello.cs  class_hello_env.asset  class_hello_env.cs
src/: codegen.rs  convert.rs  converter.rs  ir.rs  lib.rs  main.rs  module.rs  parse.rs  pass.rs  util.rs
src/codegen/: code.rs  func.rs  instr.rs  module.rs
src/convert/: builtin_func.rs  code.rs  module.rs
src/converter/: code.rs
src/ir/: builder.rs  code.rs  func.rs  instr.rs  module.rs  node.rs  ty.rs  var.rs
src/module/: func.rs
src/parse/: code.rs  module.rs  pool.rs
src/pass/: breakable.rs  copy_propagation.rs  fix_param_overwrite.rs  recursive.rs  var.rs
tests/: cs_proj.rs  long-func-name.wast  spectest.wast  test.rs  uninit-variable.wast  value.rs
