[package]
name = "wasm2usharp"
version = "0.1.0"
edition = "2021"
authors = ["raii <raii.program@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
cranelift-entity = "0.106.2"
num-traits = "0.2.17"
once_cell = "1.18.0"
petgraph = "0.6.4"
regex = "1.9.6"
thiserror = "1.0.49"
wasmparser = "0.113.2"

[dev-dependencies]
float-cmp = "0.9.0"
tempfile = "3.8.0"
wast = "66.0.0"
