[package]
name = "wasm2usharp"
version = "0.2.1"
edition = "2021"
authors = ["raii <raii.program@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for converting WebAssembly to UdonSharp"
categories = ["command-line-utilities", "compilers", "wasm"]
keywords = ["wasm", "webassembly", "vrchat", "udon"]
repository = "https://github.com/raii-x/wasm2usharp"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
cranelift-entity = "0.108.1"
num-traits = "0.2.17"
once_cell = "1.18.0"
petgraph = "0.6.4"
regex = "1.9.6"
thiserror = "1.0.49"
wasmparser = "0.113.2"

[dev-dependencies]
float-cmp = "0.9.0"
tempfile = "3.8.0"
wast = "66.0.0"
